--- a/success.html
+++ b/success.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Ultra Wash — Success</title>
   <link rel="stylesheet" href="assets/style.css" />
 </head>
@@ -34,25 +34,25 @@
     <!-- ======================== CONTENT ======================= -->
     <div class="content">
 
-      <div class="card center" style="padding: 60px 20px;">
-        
-        <div style="font-size: 70px; margin-bottom: 20px;">✅</div>
+      <div class="card center" style="padding: 60px 30px;">
+
+        <div style="font-size: 70px; margin-bottom: 18px;">✅</div>
 
         <h2>Submission Successful</h2>
         <p>Your form has been submitted successfully.</p>
 
-        <div class="flex" style="justify-content: center; margin-top: 30px;">
+        <div class="flex" style="justify-content:center; margin-top:30px;">
           <a href="customer-form.html" class="btn">Submit Another</a>
           <a href="index.html" class="btn" style="background:#888; margin-left:10px;">Back to Dashboard</a>
         </div>
 
       </div>
 
-    </div><!-- end content -->
+    </div>
 
-  </div><!-- end main -->
+  </div>
 
-</div><!-- end layout -->
+</div>
 
 <script src="assets/script.js"></script>
 </body>
